@@ -46,8 +46,8 @@ public class SecurityConfig {
         CorsConfiguration ccfg = new CorsConfiguration();
         ccfg.setAllowedOrigins(Arrays.asList("https://mytryfrontend-490397e0f41d.herokuapp.com"));
         ccfg.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PUT", "OPTIONS", "PATCH", "DELETE"));
-        ccfg.setAllowedHeaders(List.of("Authorization", "Content-Type"));
-        ccfg.setExposedHeaders(List.of("Authorization", "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
+        ccfg.setAllowedHeaders(Arrays.asList("*"));
+        ccfg.setExposedHeaders(Arrays.asList("*"));
         ccfg.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", ccfg);
